--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         </div>
 
         <!--   JavaScript files:   -->
+         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6b_g4TYoEl6Gr2EWZS6o1b7_hGdX_BTc&callback=initMap"
+  type="text/javascript"></script>
         <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
         <script src="js/utility.js"></script>
         <script src="js/shared.js"></script>
